cabal-version: 2.2
name: aeson-like
version: 0.1.0.0
synopsis: TODO
-- description:
homepage: https://github.com/jmackie/aeson-like
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: Jordan Mackie
maintainer: jordan.mackie@habito.com
-- copyright:
category: Network
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/jmackie/aeson-like.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
    Data.Aeson.ObjectLike
    Data.Aeson.EnumLike
-- other-modules:
  build-depends:
    base ^>=4.12.0.0,
    aeson,
    hashable,
    text,
    unordered-containers,

test-suite tests
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Data.Aeson.ObjectLike.Tests
    Data.Aeson.EnumLike.Tests
  build-depends:
    base ^>=4.12.0.0,
    aeson-like,
    tasty,
    tasty-hunit,
    aeson,
    bytestring,

test-suite readme
  type: exitcode-stdio-1.0
  main-is: README.lhs
  ghc-options:  
    -pgmL markdown-unlit -Wall
  default-extensions: OverloadedStrings
  build-depends: 
    base, 
    aeson,
    aeson-like,
    markdown-unlit,
    tasty,
    tasty-hunit,
