cabal-version: 2.2
name: aeson-like
version: 0.1.0.0
synopsis: TODO
description: TODO: really should to this
homepage: https://github.com/jmackie/aeson-like
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: Jordan Mackie
maintainer: jordan.mackie@habito.com
-- copyright:
category: Network
--extra-source-files:
tested-with:
  GHC==8.6.4

source-repository head
  type: git
  location: git://github.com/jmackie/aeson-like.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
    Data.Aeson.ObjectLike
    Data.Aeson.EnumLike
    Data.Aeson.SomethingLike
  build-depends:
    base ^>=4.12.0.0,
    aeson,
    hashable,
    text,
    unordered-containers,

test-suite unit
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Data.Aeson.ObjectLike.Tests
    Data.Aeson.EnumLike.Tests
  build-depends:
    base ^>=4.12.0.0,
    aeson-like,
    tasty,
    tasty-hunit,
    aeson,
    bytestring,
    doctest,

test-suite doc
  default-language: Haskell2010
  ghc-options: -Wall 
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doc.hs
  build-depends:
    base, 
    doctest,

test-suite readme
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: README.lhs
  ghc-options:
    -pgmL markdown-unlit -Wall
  build-depends:
    base,
    aeson,
    aeson-like,
    tasty,
    tasty-hunit,
  build-tool-depends:
    markdown-unlit:markdown-unlit
